--- a/css/styles.css
+++ b/css/styles.css
@@ -555,6 +555,18 @@ color: #FFFFFF;
 .portfolio-list-link {
   display: block;
 }
+.text-over {
+  position: relative;
+}
+.text-overlay::before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
 .portfolio-list-link:hover,
 .portfolio-list-link:focus {
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
