--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ height: 4px;
 background: var(--accent-color);
 border-radius: 2px;
 position: absolute;
-bottom: 0;
+bottom: -31px;
 left: 0;
 }
 
@@ -287,6 +287,31 @@ color: #212121;
 text-align: center;
 margin-bottom: 50px;
 }
+
+.task-item-list {
+  position: relative;
+}
+.undertitle {
+  font-family: var(--main-font);
+  font-size: 14px;
+  line-height: 1.14;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+
+  width: 370px;
+  height: 70px;
+  background-color:rgba(47, 48, 58, 0.8);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  }
+
 /* =============== end tasks ===============*/
 /* ===============team ===============*/
 
@@ -564,6 +589,7 @@ box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   height: 404px;
   margin-right: 30px;
   margin-bottom: 30px;
+  
 }
 
 .portfolio-list-item:nth-child(3n) {
@@ -577,6 +603,7 @@ box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 20px 24px;
   background: #FFFFFF;
   border: 1px solid #eeeeee;
+  
 }
 
 .portfolio-title {
@@ -600,6 +627,7 @@ color: #FFFFFF;
 }
 .portfolio-list-link {
   display: block;
+  position: relative;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -607,6 +635,76 @@ color: #FFFFFF;
 .portfolio-list-link:focus {
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.overlay {
+  display: block;
+  position: absolute;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);}
+
+.overlay-text {
+font-family: var(--main-font);
+font-weight: 400;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+}
 
 /* ===============end portfolio page ===============*/
 
+/* ===============backdrop ===============*/
+
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 528px;
+  min-height: 581px;
+  background-color: #fff;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+/* ===============backdrop end ===============*/
