--- a/css/styles.css
+++ b/css/styles.css
@@ -657,8 +657,9 @@ position: absolute;
 transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-list-link:hover .overlay-text {
-  transform: translateY(0)
+.portfolio-list-link:hover .overlay-text,
+.portfolio-list-link:focus .overlay-text {
+  transform: translateY(0);
 }
 
 
